# mandelbrot

./: CMakeLists.txt
src/: main.cpp
